--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -11,9 +11,9 @@ $sidebarWidth = 20rem
 $contentWidth = 740px
 
 // responsive breakpoints
-$MQNarrow = 959px
-$MQMobile = 719px
-$MQMobileNarrow = 419px
+// $MQNarrow = 959px
+// $MQMobile = 719px
+// $MQMobileNarrow = 419px
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
